# SemantiFusion-Reproducibility

./: .gitignore  CITATION.cff  LICENSE_STATUS.md  README.md  RELEASE_MANIFEST.sha256  REPRODUCIBILITY_STATUS.md  config.json  pyproject.toml
.github/workflows/: test.yml
artifacts/qualitative/: provenance.json
data/: pair_manifest_template.csv
data/aggregate/: payload_results.csv  primary_comparison.csv
data/schema/: pair_manifest_fields.csv
docs/: MODEL_RELEASE_CHECKLIST.md  TARGET_AWARE_STEGANALYSIS_PROTOCOL.md
manuscript/: CITATION_AUDIT.md  README_OVERLEAF.md  main.tex  references.bib
scripts/: build_pair_manifest.py  build_qualitative_figure.py  build_release_manifest.py  compute_pair_metrics.py  reproduce_reported_tables.py  validate_release.py
src/semantifusion_repro/: __init__.py  cli.py  manifest.py  metrics.py  qualitative.py  release.py  tables.py
tests/: test_manifest.py  test_metrics.py  test_qualitative.py  test_tables.py
